compiler/testData/diagnostics/testsWithStdLib/variadicGenerics/unsupported.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

fun <<!UNSUPPORTED!>vararg<!> Ts> variadic(
    args: *Ts
) {}